--- a/pom.xml
+++ b/pom.xml
@@ -8,61 +8,22 @@
 	<artifactId>beads</artifactId>
 	<version>1.01-SNAPSHOT</version>
 
-	<build>
-		<plugins>
-			<!-- <plugin> <artifactId>maven-antrun-plugin</artifactId> <version>1.6</version> 
-				<dependencies> <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> 
-				<version>1.5.0</version> <scope>system</scope> <systemPath>${java.home}/../lib/tools.jar</systemPath> 
-				</dependency> </dependencies> <executions> <execution> <phase>compile</phase> 
-				<configuration> <target> <ant antfile="build.xml" target="default" /> </target> 
-				</configuration> <goals> <goal>run</goal> </goals> </execution> </executions> 
-				</plugin> -->
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.3.1</version>
-				<executions>
-					<execution>
-						<id>install-library</id>
-						<phase>install</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<groupId>net.beadsproject</groupId>
-							<artifactId>beads</artifactId>
-							<version>${project.version}</version>
-							<file>build/beads/library/beads.jar</file>
-							<packaging>jar</packaging>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-	</build>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>jarjar</groupId>
-			<artifactId>jarjar</artifactId>
-			<version>0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>javazoom</groupId>
-			<artifactId>jlayer</artifactId>
-			<version>1.0.1</version>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>tritonus-all</artifactId>
+			<version>0.3.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jaudiolibs</groupId>
 			<artifactId>audioservers-jack</artifactId>
 			<version>1.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>tritonus-all</artifactId>
-			<version>0.3.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jaudiolibs</groupId>
